--- a/OFC_Cliente/src/model/views/SignUpWindow.fxml
+++ b/OFC_Cliente/src/model/views/SignUpWindow.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="OFC_SIGN_UP" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #000;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.SignUpWindowController">
+<Pane fx:id="OFC_SIGN_UP" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #000;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.controllers.SignUpWindowController">
    <children>
       <AnchorPane disable="true" layoutX="242.0" layoutY="214.0" opacity="0.59" prefHeight="200.0" prefWidth="200.0" style="-fx-filter-blur: 10px;">
          <children>
@@ -25,10 +25,10 @@
             <Pane disable="true" layoutX="-21.0" layoutY="5.0" opacity="0.5" prefHeight="205.0" prefWidth="349.0" style="-fx-effect: gaussianBlurgaussianBlur(); -fx-background-color: #000;" />
          </children>
       </AnchorPane>
-      <TextField fx:id="userNameTxTF" layoutX="192.0" layoutY="206.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="160.0" promptText="max 15 characters" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: white;" />
-      <PasswordField fx:id="passwdTxPF" layoutX="465.0" layoutY="206.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="160.0" promptText="min 6 max 12 characters" style="-fx-background-color: none; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: white;" />
-      <TextField fx:id="fullNameTxTF" layoutX="192.0" layoutY="356.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="160.0" promptText="max 40 characters" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: #fff;" />
-      <TextField fx:id="eMailTxTF" layoutX="464.0" layoutY="356.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="160.0" promptText="example@example.com" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: white;" />
+      <TextField fx:id="userNameTxTF" layoutX="192.0" layoutY="206.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="170.0" promptText="max 15 characters" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: white;" />
+      <PasswordField fx:id="passwdTxPF" layoutX="465.0" layoutY="206.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="170.0" promptText="min 6 max 12 characters" style="-fx-background-color: none; -fx-border-color: white; -fx-border-width: 0px 0px 2px 0px; -fx-text-fill: white;" />
+      <TextField fx:id="fullNameTxTF" layoutX="192.0" layoutY="356.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="170.0" promptText="max 40 characters" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: #fff;" />
+      <TextField fx:id="eMailTxTF" layoutX="464.0" layoutY="356.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="34.0" prefWidth="170.0" promptText="example@example.com" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: white;" />
       <Label layoutX="194.0" layoutY="168.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="17.0" prefWidth="70.0" text="Username" textFill="WHITE" />
       <Label layoutX="194.0" layoutY="319.0" prefHeight="17.0" prefWidth="70.0" text="Full name" textFill="WHITE" />
       <Label layoutX="464.0" layoutY="168.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="17.0" prefWidth="70.0" text="Password" textFill="WHITE" />
@@ -68,14 +68,7 @@
             <Image url="@../sources/questionIconYellow.png" />
          </image>
           </ImageView>
-      <Button fx:id="spBtn" layoutX="645.0" layoutY="207.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="16.0" style="-fx-background-color: none; -fx-text-fill: #fff;">
-         <graphic>
-              <ImageView fitHeight="22.0" fitWidth="22.0">
-                  <image>
-                      <Image url="@../sources/eyeShowPasswdIcon.png" />
-                  </image>
-              </ImageView>
-         </graphic></Button>
+      <Button fx:id="spBtn" layoutX="645.0" layoutY="207.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="16.0" style="-fx-background-color: none; -fx-text-fill: #fff;" />
       <Button fx:id="backBtn" cancelButton="true" layoutX="129.0" layoutY="65.0" mnemonicParsing="false" rotate="180.0" style="-fx-background-color: none; -fx-text-fill: #fff;">
           <graphic>
               <ImageView fitHeight="46.0" fitWidth="46.0">
@@ -86,5 +79,10 @@
           </graphic>
       </Button>
       <TextField fx:id="pass_text" layoutX="465.0" layoutY="206.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="28.0" prefWidth="160.0" promptText="min 6 max 12 characters" scaleZ="0.0" style="-fx-background-color: none; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: white; -fx-text-fill: white;" visible="false" />
+        <ImageView fitHeight="22.0" fitWidth="22.0" layoutX="657.0" layoutY="214.0">
+            <image>
+                <Image url="@../sources/eyeShowPasswdIcon.png" />
+            </image>
+        </ImageView>
    </children>
 </Pane>
